--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,4 +6,4 @@ repos:
         entry: bash -c 'venv/Scripts/pip3 freeze > requirements.txt; git add requirements.txt'
         language: system
         pass_filenames: false
-        stages: [commit]
+        stages: [pre-commit]
