--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 distlib==0.3.9
 filelock==3.17.0
 Flask==3.1.0
+greenlet==3.1.1
 identify==2.6.7
 itsdangerous==2.2.0
 Jinja2==3.1.5
@@ -13,5 +14,7 @@ nodeenv==1.9.1
 platformdirs==4.3.6
 pre_commit==4.1.0
 PyYAML==6.0.2
+SQLAlchemy==2.0.38
+typing_extensions==4.12.2
 virtualenv==20.29.2
 Werkzeug==3.1.3
